--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "littera": "zoxon/littera",
-    "lodash-es": "^4.17.11",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -33,6 +33,10 @@
     ]
   },
   "devDependencies": {
-    "prop-types": "^15.7.2"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-enzyme": "^7.0.2",
+    "prop-types": "^15.7.2",
+    "react-test-renderer": "^16.8.6"
   }
 }
