--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "b12-carousel",
-  "version": "0.1.0",
+  "name": "react-carousel",
+  "homepage": "https://zoxon.github.io/react-carousel",
+  "version": "1.0.0",
+  "author": "zoxon",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm install && npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +40,7 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "gh-pages": "^2.0.1",
     "jest-enzyme": "^7.0.2",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^16.8.6"
