--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm install && npm run build",
+    "predeploy": "yarn install && yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
