--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "littera": "zoxon/littera",
+    "littera": "github:zoxon/littera",
     "lodash": "^4.17.11",
     "normalize-path": "^3.0.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
